public/styles.css
* {
  margin: 0;
  padding: 0;
}

body {
  background: #111;
  background-image: url(images/bg.png);
  overflow: hidden;
}

#battlefield {
  width: 800px;
  min-height: 300px;
  margin: 0 auto;
  transform: scale(1.25) translateY(30px);
}

.video-container {
  float: left;
  width: 400px;
  height: 300px;
  position: relative;
}

.video-container+.video-container {
  float: right;
}

.video-container video, .video-container canvas {
  position: absolute;
  top: 0;
  left: 0;
  -o-transform : scaleX(-1);
	-webkit-transform : scaleX(-1);
	transform : scaleX(-1);
	-ms-filter : fliph; /*IE*/
	filter : fliph; /*IE*/
}

#peer-container .health-bar-container {
  opacity: 0;
  /*transform: translateX(200px);*/
  transition: all 1s;
}

#self-container {
  /*transform: translateX(-200px);*/
  transition: all 1s;
}

#instructions {
  opacity: 1;
  transition: all 1s;
}

#battlefield.ready #peer-container .health-bar-container {
  opacity: 1;
  /*transform: translateX(0);*/
}

#battlefield.ready #self-container {
  /*transform: translateX(0);*/
}

#battlefield.ready #instructions {
  opacity: 0;
}

#instructions {
  padding: 0 20px;
  width: 360px;
  height: 300px;
  user-select: none;
  cursor:default;
  letter-spacing: 1px;
  -webkit-font-smoothing: subpixel-antialiased;
  -moz-osx-font-smoothing: grayscale;
  text-align: left;
  font-family: sans-serif;
}

#instructions p {
  font-size: 14px;
  line-height: 1.5;
}

h1, h2, a.btn {
  -webkit-font-smoothing: subpixel-antialiased;
  -moz-osx-font-smoothing: grayscale;
}

h1, h2 {
  pointer-events: none;
}

h1 {
  color: #D01515;
  font-size: 180px;
  font-family: 'fightthisregular';
  text-shadow: 0 -5px 0 #000;
  letter-spacing: 6px;
}

h2 {
  font-size: 58px;
  margin-bottom: 15px;
  font-family: 'fightthisregular';
}

h2 img {
  width: 50px;
  height: 50px;
  margin-right: 10px;
  vertical-align: middle;
}

p {
  margin: 10px 0;
}

ol li {
  margin: 15px;
  font-size: 22px;
  list-style: none;
  transition: all 0.1s;
  user-select: none;
  cursor:default;
  font-family: 'fightthisregular';
  letter-spacing: 1px;
  -webkit-font-smoothing: subpixel-antialiased;
  -moz-osx-font-smoothing: grayscale;
  transform: skew(15deg);
}

ol:hover li {
  opacity: 0.2;
}

ol:hover li:hover {
  transform: scale(2) skew(15deg);
  opacity: 1;
}

ol li a {
  color: white;
  transition: all 0.1s;
}

.vote-us {
  position: fixed;
  width: 105px;
  right: 12px;
  top: 15px;
}

.team-page {
  position: fixed;
  width: 86px;
  right: 130px;
  top: 15px;
  font-family: 'fightthisregular';
  letter-spacing: 1px;
  display: block;
  background: #bbb;
  text-align: center;
  padding: 2px 0;
  text-decoration: none;
  color: black;
  border-radius: 3px;
}

.page {
  display: none;
  width: 80%;
}

.welcome {
  margin: auto;
  display: block;
  position: relative;
  text-align: center;
  padding-top: 120px;
}

.welcome img {
  display: inline-block;
  clear: both;
}

.rules {
  height: calc(100%);
  margin: auto;
  text-align: center;
  font-family: 'Architects Daughter', cursive;
  color: white;
  padding-top: 120px;
}

.arena {
  margin: auto;
  width: 840px;
  height: 400px;
  padding-top: 50px;
  color: white;
}

.arena img.arena-logo {
  width: 50%;
  display: block;
  margin: 0 auto 50px auto;
}

.arena p {
  font-size: 20px;
}

.video-pane video {
  width: 420px;
}

.col-left {
  float: left;
}

.col-right {
  float: right;
}

.health-bar-container {
  position: absolute;
  top: -5px;
  height: 5px;
  width: 400px;
  background: #480A0A;
}

.health-bar {
  background: rgba(219,31,5,1);
  height: 5px;
}

.health-bar-container p {
  display: none;
  font-size: 16px;
}

.clr {
  clear: both;
}

button {
  padding: 5px 10px;
  cursor: pointer;
}

button.tweet {
  background-image: url(../images/tweet.png);
  background-size: cover;
  height: 27px;
  position: absolute;
  margin-top: 5px;
  width: 75px;
  outline: 0;
  border: none;
}

span.tab {
  margin-left: 83px;
}

/* css button */

a.btn {
  position: relative;
  color: rgba(255,255,255,1);
  text-decoration: none;
  background-color: rgba(219,87,5,1);
  transform: skew(-15deg);
  font-family: 'Yanone Kaffeesatz';
  font-weight: 700;
  font-size: 3em;
  display: inline-block;
  padding: 4px;
  letter-spacing: 2px;
  box-shadow: 0px 9px 0px rgba(219,31,5,1), 0px 9px 25px rgba(0,0,0,.7);
  margin: 30px 5px;
  width: 160px;
  text-align: center;
}

a.btn:active, a.btn:hover {
    box-shadow: 0px 0px 0px rgba(219,31,5,1), 0px 0px 6px rgba(0,0,0,.9);
    position: relative;
    top: 9px;
}

.overlay-flicker {
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  pointer-events: none;
  background-image: radial-gradient(900px at 50% -10%, rgba(255,255,255,0.5) 0%,rgba(255,255,255,0.05) 50%);
  -webkit-animation-name: flicker;
  -webkit-animation-duration: 3s;
  -webkit-animation-iteration-count: infinite;
  -webkit-animation-timing-function: linear;
}

/* https://gist.github.com/oddlyzen/1229700 */
@-webkit-keyframes flicker {
	from {opacity: 0.3;}
	4% {opacity: 0.3;}
	6% {opacity: 0.25;}
	8% {opacity: 0.35;}
	10% {opacity: 0.25;}
	11% {opacity: 0.3;}
	12% {opacity: 0.85;}
	14% {opacity: 0.35;}
	16% {opacity: 0.90;}
	17% {opacity: 0.35;}
	19% {opacity: 0.3;}
	20% {opacity: 0.3;}
	24% {opacity: 0.3;}
	26% {opacity: 0.89;}
	28% {opacity: 0.3;}
	38% {opacity: 0.05;}
	40% {opacity: 0.3;}
	42% {opacity: 0.8;}
	44% {opacity: 0.3;}
	46% {opacity: 0.3;}
	56% {opacity: 0.3;}
	58% {opacity: 0.95;}
	60% {opacity: 0.3;}
	68% {opacity: 0.3;}
  70% {opacity: .8; /*peak*/}
	72% {opacity: 0.3;}
	93% {opacity: 0.3;}
  95% {opacity: .8; /*peak*/}
	97% {opacity: 0.3;}
	to {opacity: 0.3;}
}

/* Kaboom */

.bang {
  position: absolute;
  display: none;
  z-index: 5;
}

#self-bang {

}

#self-bang {

}

